[fix] stretching pics in "pic search"
Issue is described in:

- https://github.com/searxng/searxng/issues/3915

The issue was caused bei merge of PR:

- https://github.com/searxng/searxng/pull/3895

Solution:

- Unset `width` for objects of class `.result-images`.

Tested by `make run` and query a list of results, containing `.result` and
`.result-images` objects:

     !images !go bäder :de

Closes: https://github.com/searxng/searxng/issues/3915

--- a/searx/static/themes/simple/src/less/style.less
+++ b/searx/static/themes/simple/src/less/style.less
@@ -456,6 +456,7 @@ article[data-vim-selected].category-social {
   margin: 0.25rem;
   border: none !important;
   height: @results-image-row-height;
+  width: unset;
 
   & > a {
     position: relative;
